tests/type_errors/explicit_annotation_mismatch.nos
# expect_error: type mismatch
# Test that explicit type annotation mismatch is caught

main() = {
    x: Int = "hello"
    x
}
